# Whatsapp-automation

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_user_preferred_language.py  0003_intent_translations.py  0004_conversation_state.py  0005_fulfillment.py  0006_encrypted_token.py  0007_superuser.py  0008_audit_indexes_and_email_lower.py  0009_gst_invoicing.py  0010_gst_safety.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: account.py  admin.py  auth.py  businesses.py  conversations.py  dashboard.py  fulfillment.py  intents.py  invoices.py  orders.py  reports.py  (+5 more)
backend/app/core/: config.py  crypto.py  database.py  rate_limit.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  booking.py  business.py  contact.py  conversation.py  enums.py  fulfillment.py  intent.py  invoice.py  order.py  purchase_invoice.py  sheet.py  subscription.py  usage.py  user.py  webhook.py
backend/app/schemas/: auth.py  business.py  conversation.py  fulfillment.py  intent.py  invoice.py  order.py  purchase_invoice.py  sheet.py  stats.py  subscription.py  subscription_upgrade.py
backend/app/utils/: phone.py
backend/app/workers/: celery_app.py
backend/data/: hsn_common.json
backend/data/intents/: ask_location.json  ask_menu.json  ask_price.json  ask_services.json  ask_timing.json  book_appointment.json  contact_info.json  delivery_inquiry.json  greeting.json  order_status.json  payment_inquiry.json  thanks.json
backend/scripts/: create_superuser.py
backend/tests/: conftest.py  test_crypto.py  test_health.py  test_models.py  test_rate_limit.py
backend/tests/test_admin/: test_admin_endpoints.py
backend/tests/test_ai/: test_client.py  test_smart_reply.py
backend/tests/test_auth/: test_phone.py  test_security.py  test_verification.py  test_verification_db.py
backend/tests/test_businesses/: test_schemas.py
backend/tests/test_endpoints/: test_account.py  test_auth.py  test_billing_services.py  test_businesses.py  test_conversations.py  test_dashboard.py  test_fulfillment.py  test_intents.py  test_orders.py  test_sheets.py  test_sheets_full.py  test_subscription_service.py  test_subscriptions.py  test_trial_service.py  test_webhooks.py  test_webhooks_full.py
backend/tests/test_gst/: test_calculator.py  test_einvoice.py  test_exporters.py  test_hsn_einvoice_endpoints.py  test_hsn_lookup.py  test_invoice_number.py  test_invoice_service.py  test_itr4.py  test_pdf_render.py  test_reports_endpoints.py  test_share.py  test_validation.py
backend/tests/test_intents/: test_reply_picker.py
backend/tests/test_matching/: test_engine.py  test_intent_loader.py
backend/tests/test_menu/: test_generator.py
backend/tests/test_orders/: test_fulfillment.py  test_parser.py  test_state.py  test_time_parser.py
backend/tests/test_payments/: test_razorpay.py  test_razorpay_client.py  test_signature.py
backend/tests/test_sheets/: test_client.py  test_parser.py
backend/tests/test_whatsapp/: test_client.py  test_meta_oauth.py  test_parser.py  test_processor_helpers.py  test_processor_integration.py  test_verifier.py
(+217 files in other folders)
