[project]
name = "whatsapp-saas-backend"
version = "0.1.0"
description = "WhatsApp Business Automation SaaS - Backend (FastAPI + Celery)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "cryptography>=44.0.0",
    "slowapi>=0.1.9",

    # Queue & cache
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.1",

    # HTTP client
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # Indian language processing (CORE)
    "indic-transliteration>=2.3.66",
    "rapidfuzz>=3.10.0",
    "langdetect>=1.0.9",
    "regex>=2024.11.6",

    # Google Sheets / Excel
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",

    # Payments
    "razorpay>=1.4.2",

    # GST invoicing + storage
    "weasyprint>=63.0",         # HTML/CSS → PDF
    "jinja2>=3.1.4",            # invoice templates
    "boto3>=1.34",              # Cloudflare R2 (S3-compatible)

    # Email & SMS
    "resend>=2.5.0",

    # Utils
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "orjson>=3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "faker>=33.1.0",
    "ipython>=8.30.0",
]
ai = [
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=75"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = false
omit = [
    "app/workers/*",                          # celery worker bootstrap
    "app/main.py",                            # imports + middleware glue
    "app/services/sheets/syncer.py",          # requires Google API creds (integration)
    "app/services/sheets/client.py",          # requires Google API creds (integration)
    "alembic/*",
    "tests/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true
precision = 1
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
